@@ -32,6 +32,8 @@ Olivier Bilodeau <obilodeau@inverse.ca>
 
 Copyright (C) 2010 Inverse inc.
 
+=head1 LICENSE
+
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
 as published by the Free Software Foundation; either version 2
